--- a/Hiwjcn.Web/App_Data/Config/log4net.config
+++ b/Hiwjcn.Web/App_Data/Config/log4net.config
@@ -10,7 +10,7 @@
       <appender-ref ref="ERROR_FILE" />
       <appender-ref ref="INFO_FILE" />
       <appender-ref ref="WARN_FILE" />
-      <appender-ref ref="ERROR_ES" />
+      <!--<appender-ref ref="ERROR_ES" />-->
     </root>
     <!--业务相关的日志-->
     <logger name="WebLogger" additivity="false">
