--- a/Hiwjcn.Web/App_Data/Config/log4net.config
+++ b/Hiwjcn.Web/App_Data/Config/log4net.config
@@ -16,7 +16,7 @@
     <logger name="WebLogger" additivity="false">
       <level value="INFO" />
       <appender-ref ref="B_FILE" />
-      <appender-ref ref="AdoNetAppender" />
+      <!--<appender-ref ref="AdoNetAppender" />-->
     </logger>
     <!--错误-->
     <appender name="ERROR_FILE" type="log4net.Appender.RollingFileAppender">
