--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -31,7 +31,7 @@
   <lib_zookeeper SessionTimeOut="5000" Server="zk.qipeilong.net" MasterSlavePath="/" DistributedLockPath="/lock" />
   <connectionStrings>
     <add name="MySqlConnectionString" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
-    <add name="RedisConnectionString_注释掉" connectionString="redis.qipeilong.net:6479" />
+    <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
     <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
   </connectionStrings>
   <appSettings>
