--- a/Hiwjcn.Web/Hiwjcn.Web.csproj
+++ b/Hiwjcn.Web/Hiwjcn.Web.csproj
@@ -792,6 +792,7 @@
     <Content Include="ui\font-icon\scss\_variables.scss" />
     <Content Include="Views\Shared\UserLayout.cshtml" />
     <Content Include="Views\Test\UView.cshtml" />
+    <Content Include="Views\Shared\Limited.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
