--- a/Hiwjcn.Web/Hiwjcn.Web.csproj
+++ b/Hiwjcn.Web/Hiwjcn.Web.csproj
@@ -248,6 +248,8 @@
     <Content Include="Static\image\moren.png" />
     <Content Include="Static\image\no_data.png" />
     <Content Include="Static\image\weixin_qr.jpg" />
+    <Content Include="ui\boot-theme\flatly\bootstrap.css" />
+    <Content Include="ui\boot-theme\flatly\bootstrap.min.css" />
     <Content Include="ui\bootstrap\css\bootstrap-theme.min.css" />
     <Content Include="ui\bootstrap\css\bootstrap.min.css" />
     <Content Include="ui\bootstrap\js\bootstrap.min.js" />
