--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -42,6 +42,7 @@
 
     <add key="LoadPlugin" value="true" />
 
+    <add key="disable_timestamp_check" value="true"/>
     <add key="sign_key" value="cqmyg-ysdss-jtwmy-dtsgx" />
 
     <add key="CookieDomain" value="" />
