--- a/Hiwjcn.Service/packages.config
+++ b/Hiwjcn.Service/packages.config
@@ -14,7 +14,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="Qiniu" version="7.0.0.1" targetFramework="net45" />
+  <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="Quartz" version="2.4.1" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
