--- a/Lib.storage/Lib.storage.nuspec
+++ b/Lib.storage/Lib.storage.nuspec
@@ -5,7 +5,7 @@
     <version>$version$</version>
     <title>七牛</title>
     <authors>王俊</authors>
-    <iconUrl>http://hiwjcn.qiniudn.com/832910342394600995.jpg</iconUrl>
+    <iconUrl>http://hiwjcn.qiniudn.com/20170524_072555741_iOS.png</iconUrl>
     <description>七牛</description>
   </metadata>
 </package>
