--- a/Lib/Lib.nuspec
+++ b/Lib/Lib.nuspec
@@ -1,11 +1,11 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0"?>
 <package >
   <metadata>
     <id>lib.com.nuget</id>
     <version>$version$</version>
     <title>公共组件库Lib</title>
     <authors>王俊</authors>
-    <iconUrl>http://hiwjcn.qiniudn.com/832910342394600995.jpg</iconUrl>
+    <iconUrl>http://hiwjcn.qiniudn.com/20170524_072555741_iOS.png</iconUrl>
     <description>公共组件库Lib</description>
   </metadata>
 </package>
