--- a/Hiwjcn.Web/packages.config
+++ b/Hiwjcn.Web/packages.config
@@ -23,7 +23,7 @@
   <package id="NEST" version="2.5.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
   <package id="Polly" version="5.0.6" targetFramework="net45" />
-  <package id="Qiniu" version="7.0.0.1" targetFramework="net45" />
+  <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
