--- a/Hiwjcn.Service/Hiwjcn.Service.csproj
+++ b/Hiwjcn.Service/Hiwjcn.Service.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Auth\AuthScopeService.cs" />
     <Compile Include="Auth\AuthTokenScopeService.cs" />
     <Compile Include="Auth\AuthTokenService.cs" />
+    <Compile Include="Auth\TokenEventHandler.cs" />
     <Compile Include="MyService.cs" />
     <Compile Include="QiniuHelper.cs" />
     <Compile Include="Category\CategoryBll.cs" />
