--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -291,6 +291,13 @@
     <Compile Include="mvc\attr\ValidateSignAttribute.cs" />
     <Compile Include="mvc\attr\ValidCSRFAttribute.cs" />
     <Compile Include="mvc\attr\_ActionFilterBaseAttribute.cs" />
+    <Compile Include="mvc\auth\AuthHelper.cs" />
+    <Compile Include="mvc\auth\AuthServerConfig.cs" />
+    <Compile Include="mvc\auth\AuthTokenCheckFromDatabaseProvider.cs" />
+    <Compile Include="mvc\auth\AuthTokenCheckFromWebApiProvider.cs" />
+    <Compile Include="mvc\auth\AuthValidBaseAttribute.cs" />
+    <Compile Include="mvc\auth\IAuthStoreProvider.cs" />
+    <Compile Include="mvc\auth\IAuthTokenCheckProvider.cs" />
     <Compile Include="mvc\CookieHelper.cs" />
     <Compile Include="mvc\MvcExtension.cs" />
     <Compile Include="mvc\plugin\BasePaymentController.cs" />
