--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -12,7 +12,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="NLog" version="1.0.0.505" targetFramework="net45" />
   <package id="Polly" version="5.0.6" targetFramework="net45" />
-  <package id="Qiniu" version="7.0.0.1" targetFramework="net45" />
+  <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
