--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -31,6 +31,7 @@
   <lib_zookeeper SessionTimeOut="5000" Server="zk.qipeilong.net" MasterSlavePath="/" DistributedLockPath="/lock" />
   <connectionStrings>
     <add name="MySqlConnectionString" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
+    <add name="db" connectionString="User ID=sa;Initial Catalog=parties_auth;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
     <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
     <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
   </connectionStrings>
@@ -100,12 +101,40 @@
     </customErrors>
     <pages validateRequest="false"></pages>
     <!--<sessionState mode="StateServer" stateConnectionString="tcpip=127.0.0.1:42424" timeout="30"></sessionState>-->
-    <sessionState cookieName="SID" mode="Custom" customProvider="MySqlSessionProvider">
+    <sessionState cookieName="SID" mode="Custom" customProvider="RedisSessionProvider">
       <providers>
         <!--使用mysql保存session，使用mysql.web组件（安装此组建会自动添加很多配置节点，只要保留下面节点就可以了）-->
         <!--http://dev.mysql.com/downloads/connector/net/ 选择source code下载-->
         <add name="MySqlSessionProvider" type="Lib.mvc.MySQLSessionProvider,Lib" AppID="1024" />
+        
         <!--也可以使用redis存储session，组件：RedisSessionStateProvider-->
+        <!-- For more details check https://github.com/Azure/aspnet-redis-providers/wiki -->
+        <!-- Either use 'connectionString' OR 'settingsClassName' and 'settingsMethodName' OR use 'host','port','accessKey','ssl','connectionTimeoutInMilliseconds' and 'operationTimeoutInMilliseconds'. -->
+        <!-- 'throwOnError','retryTimeoutInMilliseconds','databaseId' and 'applicationName' can be used with both options. -->
+        <!--
+          <add name="MySessionStateStore" 
+            host = "127.0.0.1" [String]
+            port = "" [number]
+            accessKey = "" [String]
+            ssl = "false" [true|false]
+            throwOnError = "true" [true|false]
+            retryTimeoutInMilliseconds = "5000" [number]
+            databaseId = "0" [number]
+            applicationName = "" [String]
+            connectionTimeoutInMilliseconds = "5000" [number]
+            operationTimeoutInMilliseconds = "1000" [number]
+            connectionString = "<Valid StackExchange.Redis connection string>" [String]
+            settingsClassName = "<Assembly qualified class name that contains settings method specified below. Which basically return 'connectionString' value>" [String]
+            settingsMethodName = "<Settings method should be defined in settingsClass. It should be public, static, does not take any parameters and should have a return type of 'String', which is basically 'connectionString' value.>" [String]
+            loggingClassName = "<Assembly qualified class name that contains logging method specified below>" [String]
+            loggingMethodName = "<Logging method should be defined in loggingClass. It should be public, static, does not take any parameters and should have a return type of System.IO.TextWriter.>" [String]
+            redisSerializerType = "<Assembly qualified class name that implements Microsoft.Web.Redis.ISerializer>" [String]
+          />
+        -->
+        <add name="RedisSessionProvider" type="Microsoft.Web.Redis.RedisSessionStateProvider"
+             connectionString="redis.qipeilong.net:6479"
+             applicationName="auth_server"
+             databaseId="9" />
       </providers>
     </sessionState>
   </system.web>
@@ -158,7 +187,8 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <!--配置EF节点开始-->
+  <!--配置EF节点开始 如果使用[DbConfigurationType(typeof(SqlServerConfiguration))]下面这个节点就不需要了 -->
+  <!--
   <entityFramework>
     <defaultConnectionFactory type="MySql.Data.Entity.MySqlConnectionFactory,MySql.Data.Entity.EF6"></defaultConnectionFactory>
     <providers>
@@ -166,19 +196,22 @@
       <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"></provider>
     </providers>
   </entityFramework>
+  -->
   <!--配置EF节点结束-->
+  <!--
   <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
   </system.data>
+  -->
   <system.serviceModel>
     <behaviors>
       <serviceBehaviors>
         <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
