--- a/Hiwjcn.Web/packages.config
+++ b/Hiwjcn.Web/packages.config
@@ -18,12 +18,14 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.Web.RedisSessionStateProvider" version="2.2.5" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="MySql.Data.Entity" version="6.9.9" targetFramework="net45" />
   <package id="NEST" version="2.5.5" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
   <package id="Polly" version="5.0.6" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
+  <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
