--- a/Hiwjcn.Web/Views/Web.config
+++ b/Hiwjcn.Web/Views/Web.config
@@ -20,6 +20,8 @@
         <add namespace="Lib.helper"/>
         <add namespace="Lib.core"/>
         <add namespace="Lib.mvc"/>
+        <add namespace="Lib.mvc.user"/>
+        <add namespace="Lib.mvc.auth"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
