--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -91,6 +91,10 @@
         <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
       </assemblies>
     </compilation>
+    <httpModules>
+      <!--在http请求中缓存autofac child scope-->
+      <add name="autofac_scope_manager" type="Lib.ioc.RequestScopeModule,Lib"/>
+    </httpModules>
     <!--<trust level="Full" originUrl="" />-->
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="utf-8" />
     <!--MVC中无法使用 ResponseRewrite（暂时使用aspx作为错误页面）asp.net自定义错误404不返回404状态，这里禁用了，自己过滤错误-->
@@ -106,7 +110,7 @@
         <!--使用mysql保存session，使用mysql.web组件（安装此组建会自动添加很多配置节点，只要保留下面节点就可以了）-->
         <!--http://dev.mysql.com/downloads/connector/net/ 选择source code下载-->
         <add name="MySqlSessionProvider" type="Lib.mvc.MySQLSessionProvider,Lib" AppID="1024" />
-        
+
         <!--也可以使用redis存储session，组件：RedisSessionStateProvider-->
         <!-- For more details check https://github.com/Azure/aspnet-redis-providers/wiki -->
         <!-- Either use 'connectionString' OR 'settingsClassName' and 'settingsMethodName' OR use 'host','port','accessKey','ssl','connectionTimeoutInMilliseconds' and 'operationTimeoutInMilliseconds'. -->
@@ -153,7 +157,10 @@
       <error responseMode="File" statusCode="400" path="ErrorPage\500.html" />
     </httpErrors>-->
     <validation validateIntegratedModeConfiguration="false" />
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true">
+      <!--在http请求中缓存autofac child scope-->
+      <add name="autofac_scope_manager" type="Lib.ioc.RequestScopeModule,Lib"/>
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
