--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -93,7 +93,7 @@
     </compilation>
     <httpModules>
       <!--在http请求中缓存autofac child scope-->
-      <add name="autofac_scope_manager" type="Lib.ioc.RequestScopeModule,Lib"/>
+      <add name="autofac_scope_manager" type="Lib.ioc.RequestScopeModule,Lib" />
     </httpModules>
     <!--<trust level="Full" originUrl="" />-->
     <globalization fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" responseHeaderEncoding="utf-8" />
@@ -135,10 +135,7 @@
             redisSerializerType = "<Assembly qualified class name that implements Microsoft.Web.Redis.ISerializer>" [String]
           />
         -->
-        <add name="RedisSessionProvider" type="Microsoft.Web.Redis.RedisSessionStateProvider"
-             connectionString="redis.qipeilong.net:6479"
-             applicationName="auth_server"
-             databaseId="9" />
+        <add name="RedisSessionProvider" type="Microsoft.Web.Redis.RedisSessionStateProvider" connectionString="redis.qipeilong.net:6479" applicationName="auth_server" databaseId="9" />
       </providers>
     </sessionState>
   </system.web>
@@ -150,16 +147,18 @@
   </system.net>
   <system.webServer>
     <!--这个是定义iis错误页面（iis7+有效），上面的是定义asp.net错误页面，只有File才能保持错误状态-->
-    <!--<httpErrors errorMode="Custom" existingResponse="Replace" defaultResponseMode="ExecuteURL">
+    <!--
+    <httpErrors errorMode="Custom" existingResponse="Replace" defaultResponseMode="ExecuteURL">
       <clear />
       <error responseMode="File" statusCode="404" path="ErrorPage\404.html" />
       <error responseMode="File" statusCode="403" path="ErrorPage\403.html" />
       <error responseMode="File" statusCode="400" path="ErrorPage\500.html" />
-    </httpErrors>-->
+    </httpErrors>
+    -->
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
       <!--在http请求中缓存autofac child scope-->
-      <add name="autofac_scope_manager" type="Lib.ioc.RequestScopeModule,Lib"/>
+      <add name="autofac_scope_manager" type="Lib.ioc.RequestScopeModule,Lib" />
     </modules>
   </system.webServer>
   <runtime>
