--- a/Hiwjcn.Web/packages.config
+++ b/Hiwjcn.Web/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Akka" version="1.2.3" targetFramework="net45" />
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.Extras.DynamicProxy" version="4.1.0" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
@@ -26,6 +27,7 @@
   <package id="Polly" version="5.0.6" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
   <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
