--- a/Hiwjcn.Framework/packages.config
+++ b/Hiwjcn.Framework/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Akka" version="1.2.3" targetFramework="net45" />
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Common.Logging" version="3.3.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net45" />
@@ -11,8 +12,10 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Quartz" version="2.5.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.0.488" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
