--- a/Hiwjcn.Web/Hiwjcn.Web.csproj
+++ b/Hiwjcn.Web/Hiwjcn.Web.csproj
@@ -120,6 +120,12 @@
     <Reference Include="Qiniu, Version=7.2.15.0, Culture=neutral, PublicKeyToken=2894d75bb9f220bf, processorArchitecture=MSIL">
       <HintPath>..\packages\Qiniu.Shared.7.2.15\lib\net45\Qiniu.dll</HintPath>
     </Reference>
+    <Reference Include="SharpRaven, Version=1.5.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpRaven.1.5.1\lib\net45\SharpRaven.dll</HintPath>
+    </Reference>
+    <Reference Include="SharpRaven.Log4Net, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpRaven.Log4Net.1.5.2\lib\net40\SharpRaven.Log4Net.dll</HintPath>
+    </Reference>
     <Reference Include="StackExchange.Redis.StrongName, Version=1.2.1.0, Culture=neutral, PublicKeyToken=c219ff1ca8c2ce46, processorArchitecture=MSIL">
       <HintPath>..\packages\StackExchange.Redis.StrongName.1.2.1\lib\net45\StackExchange.Redis.StrongName.dll</HintPath>
     </Reference>
@@ -758,6 +764,7 @@
     <Content Include="App_Data\Lang\en.json" />
     <Content Include="App_Data\Lang\zh-cn.json" />
     <Content Include="App_Data\Config\log4net.config" />
+    <Content Include="App_Data\Config\sentry.config" />
     <None Include="Properties\PublishProfiles\iis.pubxml" />
     <None Include="Properties\PublishProfiles\xx.pubxml" />
     <Content Include="Views\Shared\tag_input.cshtml" />
