--- a/Hiwjcn.Web/packages.config
+++ b/Hiwjcn.Web/packages.config
@@ -26,6 +26,8 @@
   <package id="Newtonsoft.Json" version="10.0.1" targetFramework="net45" />
   <package id="Polly" version="5.0.6" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
+  <package id="SharpRaven" version="1.5.1" targetFramework="net45" />
+  <package id="SharpRaven.Log4Net" version="1.5.2" targetFramework="net45" />
   <package id="StackExchange.Redis.StrongName" version="1.2.1" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
