--- a/Hiwjcn.Web/Views/Web.config
+++ b/Hiwjcn.Web/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="Lib.helper"/>
         <add namespace="Lib.core"/>
+        <add namespace="Lib.extension"/>
         <add namespace="Lib.mvc"/>
         <add namespace="Lib.mvc.user"/>
         <add namespace="Lib.mvc.auth"/>
