--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -41,7 +41,7 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="LoadPlugin" value="true" />
+    <add key="LoadPlugin" value="true=" />
 
     <add key="disable_timestamp_check" value="true" />
     <add key="sign_key" value="cqmyg-ysdss-jtwmy-dtsgx" />
