--- a/Hiwjcn.Web/Hiwjcn.Web.csproj
+++ b/Hiwjcn.Web/Hiwjcn.Web.csproj
@@ -833,6 +833,8 @@
     <Content Include="Views\Shared\Analysis.cshtml" />
     <Content Include="Views\Connect\Login.cshtml" />
     <Content Include="Views\Connect\Authorize.cshtml" />
+    <Content Include="Views\Shared\auth_loginbypassword.cshtml" />
+    <Content Include="Views\Shared\auth_loginbycode.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
