--- a/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -123,6 +123,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actors\CacheHitLogActor.cs" />
     <Compile Include="Actors\LogRequestActor.cs" />
     <Compile Include="Actors\SendMailActor.cs" />
     <Compile Include="Actors\UpdateEsIndexActor.cs" />
