--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -82,6 +82,9 @@
     <!--15天-->
     <add key="CookieExpiresMinutes" value="21600" />
     <add key="CacheExpiresMinutes" value="1" />
+    
+    <add key="auth.client_id" value="auth.official.client.id" />
+    <add key="auth.client_security" value="auth.official.client.security" />
   </appSettings>
   <system.web>
     <httpRuntime requestValidationMode="2.0" targetFramework="4.5" />
