--- a/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -124,6 +124,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actors\CacheHitLogActor.cs" />
+    <Compile Include="Actors\ClearCacheActor.cs" />
     <Compile Include="Actors\LogRequestActor.cs" />
     <Compile Include="Actors\SendMailActor.cs" />
     <Compile Include="Actors\UpdateEsIndexActor.cs" />
