--- a/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -132,6 +132,8 @@
     <Compile Include="CommonDependencyRegister.cs" />
     <Compile Include="DataBaseInitData.cs" />
     <Compile Include="Provider\AuthLocalValidationProvider.cs" />
+    <Compile Include="Provider\AuthTokenToUserService.cs" />
+    <Compile Include="Provider\IAuthTokenToUserService.cs" />
     <Compile Include="Tasks\CleanDatabaseTask.cs" />
     <Compile Include="Tasks\ClearRequestLogTask.cs" />
     <Compile Include="Tasks\ConcurrentTestTask.cs" />
