--- a/Hiwjcn.Web/Hiwjcn.Web.csproj
+++ b/Hiwjcn.Web/Hiwjcn.Web.csproj
@@ -840,6 +840,7 @@
     <Content Include="Views\Shared\AuthManageLayout.cshtml" />
     <Content Include="Views\AuthManage\Clients.cshtml" />
     <Content Include="Views\AuthManage\Statics.cshtml" />
+    <Content Include="Views\AuthManage\Tasks.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
