--- a/Hiwjcn.Web/packages.config
+++ b/Hiwjcn.Web/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.AspNet.Razor.zh-Hans" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages.zh-Hans" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Net.Compilers" version="2.3.1" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Microsoft.Web.RedisSessionStateProvider" version="2.2.5" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
