--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -31,7 +31,9 @@
   <lib_zookeeper SessionTimeOut="5000" Server="zk.qipeilong.net" MasterSlavePath="/" DistributedLockPath="/lock" />
   <connectionStrings>
     <add name="db_" connectionString="database=hiwjcn_auth;server=127.0.0.1;port=3306;characterset=utf8;user id=root;password=123;connectiontimeout=3" />
+    <!--auth数据库-->
     <add name="db" connectionString="User ID=sa;Initial Catalog=parties_auth;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
+    <!--parties数据库-->
     <add name="db_parties" connectionString="User ID=sa;Initial Catalog=parties;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
     <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
     <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
@@ -83,7 +85,8 @@
     <!--15天-->
     <add key="CookieExpiresMinutes" value="21600" />
     <add key="CacheExpiresMinutes" value="1" />
-    
+
+
     <add key="auth.client_id" value="auth.official.client.id" />
     <add key="auth.client_security" value="auth.official.client.security" />
   </appSettings>
