--- a/Hiwjcn.Core/Hiwjcn.Core.csproj
+++ b/Hiwjcn.Core/Hiwjcn.Core.csproj
@@ -81,6 +81,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheKeyManager.cs" />
     <Compile Include="Data\Auth\AuthClientRepository.cs" />
     <Compile Include="Data\Auth\AuthCodeRepository.cs" />
     <Compile Include="Data\Auth\AuthScopeRepository.cs" />
@@ -97,6 +98,7 @@
     <Compile Include="Data\EntityDB.cs" />
     <Compile Include="Data\Page\SectionDal.cs" />
     <Compile Include="Data\QPLEntityDB.cs" />
+    <Compile Include="Data\SSODB.cs" />
     <Compile Include="Data\Tag\TagDal.cs" />
     <Compile Include="Data\Tag\TagMapDal.cs" />
     <Compile Include="Data\User\IUserDal.cs" />
