--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -35,6 +35,7 @@
     <add name="db" connectionString="User ID=sa;Initial Catalog=parties_auth;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
     <!--parties数据库-->
     <add name="db_parties" connectionString="User ID=sa;Initial Catalog=parties;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
+    <add name="db_sso" connectionString="User ID=sa;Initial Catalog=parties_sso;Data Source=db.qipeilong.net;Password=1q2w3e4r5T;Connect Timeout=20" />
     <add name="RedisConnectionString" connectionString="redis.qipeilong.net:6479" />
     <add name="ES" connectionString="http://es.qipeilong.net:9200/" />
   </connectionStrings>
