--- a/Hiwjcn.Framework/Hiwjcn.Framework.csproj
+++ b/Hiwjcn.Framework/Hiwjcn.Framework.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Tasks\ClearRequestLogTask.cs" />
     <Compile Include="Tasks\ConcurrentTestTask.cs" />
     <Compile Include="Tasks\DataReportTask.cs" />
+    <Compile Include="Tasks\UpdateEsIndexTask.cs" />
     <Compile Include="UserController.cs" />
     <Compile Include="Simple_CRUD.cs" />
     <Compile Include="Tasks\WakeWebSiteTask.cs" />
